--- a/src/app/components/main/about/about.component.scss
+++ b/src/app/components/main/about/about.component.scss
@@ -37,7 +37,7 @@
             border-radius: 0.5rem;
             padding:1.5rem;
             @media (prefers-color-scheme: dark) {
-                color    : var(--darkgrey);
+                color    : var(--background);
             }
         }
 
